# yozm-vibe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chapter10/llmops_lab/: conftest.py  main.py  pyproject.toml
chapter10/llmops_lab/app/: claude_runner.py  langfuse_ops.py  prompting.py  service.py  web_app.py
chapter10/llmops_lab/artifacts/: app_runs.jsonl
chapter10/llmops_lab/prompts/: support_answer.md
chapter10/llmops_lab/templates/: form.html  result.html
chapter10/llmops_lab/tests/: test_claude_runner.py  test_evaluator.py  test_prompting.py
chapter8/rss-wiki/: PROMPT.md  README.md  pyproject.toml  ralph.sh
chapter8/rss-wiki-goal/: .gitignore  pyproject.toml
chapter8/rss-wiki-goal/docs/: JOURNAL.md  PRD.md  TASKS.md  TC.md
chapter8/rss-wiki-goal/src/rss_wiki/: config.py  db.py  main.py  models.py  scheduler.py
chapter8/rss-wiki-goal/src/rss_wiki/pipeline/: extractor.py  fetcher.py  llm.py  rebuilder.py  summarizer.py
chapter8/rss-wiki-goal/src/rss_wiki/web/: routes.py
chapter8/rss-wiki-goal/tests/: conftest.py  test_config.py  test_db.py  test_e2e.py  test_extractor.py  test_fetcher.py  test_llm.py  test_models.py  test_rebuilder.py  test_routes.py  test_summarizer.py
chapter8/rss-wiki/docs/: JOURNAL.md  TASKS.md  pyproject.toml
chapter8/rss-wiki/docs/src/docs/: __init__.py
chapter8/rss-wiki/src/rss_wiki/: __init__.py  config.py  db.py  main.py  models.py  scheduler.py
chapter8/rss-wiki/src/rss_wiki/pipeline/: __init__.py  cycle.py  extractor.py  fetcher.py  llm.py  rebuilder.py  summarizer.py
chapter8/rss-wiki/src/rss_wiki/prompts/: article_summarize.txt  wiki_rebuild.txt
chapter8/rss-wiki/src/rss_wiki/web/: __init__.py  routes.py
chapter8/rss-wiki/tests/: test_config.py  test_db.py  test_dev_dependencies.py  test_main.py  test_models.py  test_pipeline_cycle.py  test_pipeline_extractor.py  test_pipeline_fetcher.py  test_pipeline_llm.py  test_pipeline_rebuilder.py  test_pipeline_summarizer.py  test_project_layout.py  test_prompts.py  test_readme.py  test_runtime_dependencies.py  test_scheduler.py  test_smoke_boot.py  test_web_categories.py  test_web_categories_manage.py  test_web_feeds.py  test_web_logs_fetch.py  test_web_search.py  test_web_templates_categories.py  test_web_templates_feeds.py  test_web_templates_rest.py
chapter9/harness/: pyproject.toml
chapter9/harness/src/harness/: __init__.py  run.py
chapter9/harness/src/harness/prompts/: evaluator.md  generator.md  planner.md  planner_bootstrap.md
chapter9/projects/rss-wiki/: README.md  feeds.example.toml  feeds.json  feeds.toml  main.py  pyproject.toml  state.json
chapter9/projects/rss-wiki/data/: rss-wiki.db
chapter9/projects/rss-wiki/docs/: IMPL.md  JOURNAL.md  PLAN.md  PRD.md  REVIEW.md  TASKS.md
chapter9/projects/rss-wiki/output/: daily-2026-05-05.md  index-category-자동차 ux-ui.md  index-tag-mbux hyperscreen.md  index-tag-mercedes-benz.md  index-tag-물리 버튼.md  index-tag-자동차 ux.md  index-tag-터치스크린.md  weekly-2026-W19.md
chapter9/projects/rss-wiki/src/rss_wiki/: __init__.py  cli.py  config.py  extract.py  feeds.py  ingest.py  pipeline.py  store.py  summarize.py  wiki.py
chapter9/projects/rss-wiki/tests/: test_cli.py  test_config.py  test_extract.py  test_feeds.py  test_ingest.py  test_ingest_dedupe.py  test_ingest_extractor.py  test_ingest_failures.py  test_ingest_fetcher.py  test_llm_client.py  test_llm_prompts.py  test_pipeline.py  test_pipeline_bootstrap.py  test_pipeline_ingest.py  test_pipeline_llm.py  test_pipeline_publish.py  test_progress.py  test_publish_daily.py  test_publish_indexes.py  test_publish_monthly.py  test_publish_weekly.py  test_render.py  test_smoke.py  test_storage_db.py  test_storage_repo.py  test_store.py  test_summarize.py  test_web_app.py  test_wiki.py
chapter9/projects/rss-wiki/wiki/: index.md
chapter9/projects/rss-wiki/wiki/articles/: 2026-07-06-ai-시대-figma를-다시-생각하다.md  2026-07-06-ai-코딩-시대의-개발자-역할-변화-코딩-실행자에서-맥락-검증-제품화-설계자로.md  2026-07-06-dbtrail-모든-행-변경을-기억하고-되돌리기-가능한-mysql용-타임머신.md  2026-07-06-eu-이사회가-신속-절차로-chat-control을-밀어붙임.md  2026-07-06-figma는-다음에-무엇을-할-것인가.md  2026-07-06-flipper-zero-개발의-미래.md  2026-07-06-openprinter-수리-가능한-컴팩트-오픈-프린터.md  (+116 more)
chapter9/projects/todo-app/backend/: .gitignore  pyproject.toml
(+375 files in other folders)
