[project]
name = "rss-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wapj", email = "wapj2000@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.26",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
rss-wiki = "rss_wiki:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
