[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wapj", email = "wapj2000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
harness = "harness:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
