[project]
name = "rss-wiki-ch9"
version = "0.1.0"
description = "RSS 피드를 LLM으로 요약해 마크다운 위키로 정리하는 개인용 CLI 도구"
readme = "README.md"
authors = [
    { name = "wapj", email = "wapj2000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "trafilatura>=2.0.0",
    "typer>=0.21.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
rss-wiki = "rss_wiki.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rss_wiki"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
